[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "llm-sdk",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
]

[tool.uv.workspace]
members = [
    "llm_sdk/llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
